--- a/static/select.css
+++ b/static/select.css
@@ -35,10 +35,6 @@ Select
     cursor: pointer;
 }
 
-/* Убираем стрелочку в IE 10 и 11 */
-.select::-ms-expand {
-    display: none;
-}
 
 /* По клику - убираем обводку и добавляем свою*/
 .select:focus {
@@ -46,12 +42,12 @@ Select
     box-shadow: 0px 0px 0px 1px #38577a, 0px 0px 10px #7e9bbd;
 }
 
-/* Делаем .select-wrapper родительским элементом для позиционирования "стрелочки" */
+/*  .select-wrapper родительским элементом для позиционирования "стрелочки" */
 .select-wrapper {
     position: relative;
 }
 
-/* Рисуем стрелочку */
+/*  стрелочк */
 .select-wrapper::before {
     content: "";
 
@@ -70,7 +66,6 @@ Select
     border-color: #7e9bbd transparent transparent transparent;
 
     /* Снимаем клик с треугольника */
-    pointer-events: none;
 }
 
 /* *******************
